fix: fix spacing between cards

--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -1,5 +1,4 @@
 .cardLink {
-    max-width: 340px;
     display: block;
     width: 100%;
 
